# task_climate_seed

./: .gitignore  Cargo.toml  Dockerfile  README.md
db/: store.db
src/: lib.rs  main.rs
src/handlers/: customer.rs
src/utils/: sqlite_utils.rs
