[package]
name = "task_climate_seed"
version = "0.1.0"
edition = "2021"
authors = ["Telmo Reinas .:: telmo.reinas@gmail.com ::. "]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "task_climate_seed"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
